--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: dksekfbs@gmail.com
-    password: qwrsogzavfszrucu
+    password: ********************
     properties:
       mail:
         smtp:
